*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -1,4 +1,4 @@
-Hyrunder volgt een '''lyste van landen van de wearld'''.
+Hyrunder volgt en '''lyste van landen van de wearld'''.
 
 == Algemeyn erkende landen ==
 === A ===
@@ -89,7 +89,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[België|Belgie]]
 |Koaningryk Belgie
 |[[Brüssel]]
-|[[Duuts|Düütsk]]<ref name=defacto>Dit is een de facto officiele taal</ref>: Belgien <br /> [[Frans]]k<ref name=defacto />: Belgique <br /> [[Nederlaans|Neaderlandsk]]<ref name=defacto />: België
+|[[Duuts|Düütsk]]<ref name=defacto>Dit is en de facto officiele taal</ref>: Belgien <br /> [[Frans]]k<ref name=defacto />: Belgique <br /> [[Nederlaans|Neaderlandsk]]<ref name=defacto />: België
 |-
 |[[Belize]]
 |Belize
@@ -786,7 +786,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |-
 |[[Palestina]]
 |Ståt Palestina
-|[[Oostjerusalem]] (upeist) <br /> [[Ramallah]] (de facto)
+|[[Oostjerusalem]] (upeised) <br /> [[Ramallah]] (de facto)
 |[[Arabies|Arabisk]]: Filasṭīn / فلسطين
 |-
 |[[Panama]]
@@ -978,7 +978,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |-
 |[[Zwitserlaand|Switserland]]
 |Switserske Bundsståt
-|Officieel geyn, de bundsstad is [[Bern (stad)|Bern]]
+|Officieel geen, de bundsstad is [[Bern (stad)|Bern]]
 |[[Duuts|Düütsk]]: Schweiz <br /> [[Frans]]k: Suisse <br /> [[Italiaans]]k: Svizzera <br /> [[Retoromaansk]]: Svizra
 |-
 |[[Syrië|Syrie]]
@@ -1178,7 +1178,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |}
 
 == Neet algemeyn erkende landen ==
-In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale erkenning missen, mär wel [[de facto]] unafhangelik binnen en de unafhangelikheid üüteröpen hebben. In de kolom ''Erkenning'' stayt et antal ''internationaal erkende unafhangelike ståten'' dat et betreffende gebeed as unafhangelik erkent.
+In de lyste hyrunder steyt en oaversicht van landen dee en rüme internationale erkenning missen, mär wel [[de facto]] unafhangelik binnen en de unafhangelikheid üüteröpen hebben. In de kolom ''Erkenning'' steyt et antal ''internationaal erkende unafhangelike ståten'' dat et betreffende gebeed as unafhangelik erkent.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1191,19 +1191,19 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Republik Abchazie
 |[[Suchumi]]
 |[[Abchazies|Abchazisk]]: Apsny / Аҧсны <br /> [[Russies|Russisk]]: Abchazija / Абхазия
-|4<ref>[[Abchazie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een autonome republik van [[Georgië]]. De unafhangelikheid van Abchazie wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Abchazie is ouk ooyt erkend döär Vanuatu en Tuvalu, mär disse landen hebben höär erkenning inetrökken.</ref>
+|4<ref>[[Abchazie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as en autonome republik van [[Georgië]]. De unafhangelikheid van Abchazie wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Abchazie is ouk ooyt erkend döär Vanuatu en Tuvalu, mär disse landen hebben höär erkenning inetrökken.</ref>
 |-
 |[[Arabiske Demokratiske Republik Sahara|ADRS]]
 |Arabiske Demokratiske Republik Sahara (ADRS)
-|[[al-Ajun]] (upeist) <br /> [[Tifariti]] (de facto)
+|[[al-Ajun]] (upeised) <br /> [[Tifariti]] (de facto)
 |[[Arabies|Arabisk]]: Al-Jumhūrīya al-ʿArabīya aṣ-Ṣaḥrāwīya ad-Dīmuqrāṭīya / الجمهورية العربية الصحراوية الديمقراطية <br /> [[Spaans]]k: República Árabe Saharaui Democrática (RASD)
-|45<ref>De [[Arabiske Demokratiske Republik Sahara]] (ADRS) hevt feitelik allinnig gesag oaver een klein deyl van de [[Westelike Sahara]]. De rest wördt de facto bestüürd döär Marokko, mär et Marokkaanske bestüür oaver de Westelike Sahara wördt internationaal neet erkend. De ADRS is ooyt döär 84 landen erkend. 39 landen hebben höär erkenning lykewel wear inetrökken of upeskorted.</ref>
+|45<ref>De [[Arabiske Demokratiske Republik Sahara]] (ADRS) hevt feitelik allinnig gesag oaver en klein deyl van de [[Westelike Sahara]]. De rest wördt de facto bestüürd döär Marokko, mär et Marokkaanske bestüür oaver de Westelike Sahara wördt internationaal neet erkend. De ADRS is ooyt döär 84 landen erkend. 39 landen hebben höär erkenning lykewel wear inetrökken of upeskorted.</ref>
 |-
 |[[Republik Artsach|Artsach]]
 |Republik Artsach
 |[[Stepanakert]]
 |[[Armeens]]k: Artsakh / Արցախ
-|0<ref>De [[Republik Artsach]], ouk wel de Republik Nagorno-Karabach enöömd, hevt de kontrole oaver een grout deyl van de regio [[Nagorno-Karabach]], mär wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Azerbaidjan]]. De unafhangelikheid van Artsach wördt allinnig erkend döär Abchazie, Transnistrie en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
+|0<ref>De [[Republik Artsach]], ouk wel de Republik Nagorno-Karabach enöömd, hevt de kontrole oaver en grout deyl van de regio [[Nagorno-Karabach]], mär wördt döär et groutste deyl van de internationale gemeynskap eseen as en underdeyl van [[Azerbaidjan]]. De unafhangelikheid van Artsach wördt allinnig erkend döär Abchazie, Transnistrie en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
 |-
 <!-- LET UP! [[Katalonie]] is (noch) neet [[de facto]] unafhangelik -->
 |-
@@ -1211,7 +1211,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Volksrepublik Donetsk
 |[[Donetsk]]
 |[[Russies|Russisk]]: Donetsk / Донецк
-|0<ref name=oekraine>De [[Volksrepublik Donetsk]] en de [[Volksrepublik Lugansk]] hebben de kontrole oaver een gedeylte van de Ukrainske oblasten [[Oblast Donetsk|Donetsk]] en [[Oblast Luhansk|Luhansk]], mär wörden döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Ukraine]]. De volksrepubliken erkennen mekaars unafhangelikheid en wörden beide vearder enkeld erkend döär Süüdossetie, dat selv ouk neet algemeyn erkend wördt.</ref>
+|0<ref name=oekraine>De [[Volksrepublik Donetsk]] en de [[Volksrepublik Lugansk]] hebben de kontrole oaver en gedeylte van de Ukrainske oblasten [[Oblast Donetsk|Donetsk]] en [[Oblast Luhansk|Luhansk]], mär wörden döär et groutste deyl van de internationale gemeynskap eseen as en underdeyl van [[Ukraine]]. De volksrepubliken erkennen mekaars unafhangelikheid en wörden beide vearder enkeld erkend döär Süüdossetie, dat selv ouk neet algemeyn erkend wördt.</ref>
 |-
 |[[Volksrepublik Lugansk|Lugansk]]
 |Volksrepublik Lugansk
@@ -1223,7 +1223,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Türkske Republik Noordcyprus
 |[[Lefkoşa]]
 |[[Turks|Türksk]]: Kuzey Kıbrıs
-|1<ref>[[Noordcyprus]] wördt allinnig erkend döär Türkie. De rest van de internationale gemeynskap seet Noordcyprus as een underdeyl van de [[Cyprus|Republik Cyprus]].</ref>
+|1<ref>[[Noordcyprus]] wördt allinnig erkend döär Türkie. De rest van de internationale gemeynskap seet Noordcyprus as en underdeyl van de [[Cyprus|Republik Cyprus]].</ref>
 |-
 |[[Somaliland]]
 |Republik Somaliland
@@ -1248,14 +1248,14 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Pridnestroviske Moldaviske Republik
 |[[Tiraspol]]
 |[[Moldavies|Moldavisk]]: Transnistria / Транснистря <br /> [[Oekraïens|Ukrains]]k: Pridnistrovja / Придністров'я <br /> [[Russies|Russisk]]: Pridnestrovje / Приднестровье
-|0<ref>[[Transnistrie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Moldavie]]. De unafhangelikheid wördt enkeld erkend döär Abchazie, Artsach en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
+|0<ref>[[Transnistrie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as en underdeyl van [[Moldavie]]. De unafhangelikheid wördt enkeld erkend döär Abchazie, Artsach en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
 |}
 
 == Neet-unafhangelike gebeden ==
-Dit is een lyste van [[afhangelike gebeden]]. Afhangelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhangelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Ny-Seyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn afhangelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste upenöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Ny-Seyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste upenöämen.
+Dit is en lyste van [[afhangelike gebeden]]. Afhangelike gebeden binnen gebeden dee geen integraal underdeyl binnen van en land, mär selv ouk neet unafhangelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Ny-Seyland hebben gebeden ekreeerd dee an disse definity vuldoon. Dårnåst binnen der noch en antal gebeden dee officieel geen afhangelike gebeden binnen, mär vanweagen höär bysündere ståtus toch vake sou eseen wörden. Ouk disse gebeden binnen in de lyste upenöämen. En antal landen (Argentinie, Australie, Chili, Frankryk, Ny-Seyland, Noorweagen en et Vereynigd Koaningryk) hebben en deyl van [[Antarktika]] upeised. Up basis van et [[Antarktisk Verdrag]] wörden disse anspråken internationaal neet erkend en dårümme binnen disse anspråken ouk neet in de lyste upenöämen.
 
 === Amerikaanske neet-unafhangelike gebeden ===
-De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et afhangelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewunde eilandgebeden binnen ouk afhangelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine afgeleagen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewunde eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
+De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et afhangelike gebeden binnen van de Vereynigde Ståten mid en bepålde form van selvbestüür. Dårnåst binnen der noch en antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewunde eilandgebeden binnen ouk afhangelike gebeden van de VS, mär kennen geen form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine afgeleagen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat en ''ungeorganiseerd ingelyvd territorium'' is en düs wel en integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewunde eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeised as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk en ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel en bepålde form van selvbestüür.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1335,7 +1335,7 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |}
 
 === Australiske neet-unafhangelike gebeden ===
-Australie hevt söäven eksterne territoria. Disse territoria wörden döär de australiske oaverheid eseen as een integraal underdeyl van Australie<ref>[http://www.aph.gov.au/parliamentary_Business/Committees/House_of_Representatives_Committees?url=ncet/nicitizenshipre-referral/chapter2.pdf Parliament of Australia - Norfolk Island and the Commonwealth]</ref><ref>[http://www.aph.gov.au/parliamentary_business/committees/house_of_representatives_committees?url=itrdlg/coastalshipping/subs/sub27.pdf Parliament of Australia - Submission to the inquiry into coastal shipping policy and regulation]</ref>, mär wörden vake toch eseen as afhangelike gebeden van Australie. Et [[Australisk Antarktisk Territorium]] wördt as ansprake internationaal neet erkend en is dan ouk neet in disse lyste upenöämen.
+Australie hevt söäven eksterne territoria. Disse territoria wörden döär de australiske oaverheid eseen as en integraal underdeyl van Australie<ref>[http://www.aph.gov.au/parliamentary_Business/Committees/House_of_Representatives_Committees?url=ncet/nicitizenshipre-referral/chapter2.pdf Parliament of Australia - Norfolk Island and the Commonwealth]</ref><ref>[http://www.aph.gov.au/parliamentary_business/committees/house_of_representatives_committees?url=itrdlg/coastalshipping/subs/sub27.pdf Parliament of Australia - Submission to the inquiry into coastal shipping policy and regulation]</ref>, mär wörden vake toch eseen as afhangelike gebeden van Australie. Et [[Australisk Antarktisk Territorium]] wördt as anspråke internationaal neet erkend en is dan ouk neet in disse lyste upenöämen.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1375,7 +1375,7 @@ Australie hevt söäven eksterne territoria. Disse territoria wörden döär de 
 |}
 
 === Britske neet-unafhangelike gebeden ===
-De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van et Vereynigd Koaningryk, mär binnen hyr wel van afhangelik en vallen under de britske suvereiniteit. De ansprake van et [[Britsk Antarktisk Territorium]] wördt internationaal neet erkend en is düs neet in de lyste up-enöämen. [[Jersey (eiland)|Jersey]], [[Guernsey]] en [[Man (eilaand)|Man]] vallen as [[Brits Kroonbezit|britske kroonbesittingen]] neet under de suvereiniteit van et Vereynigd Koaningryk, mär under de suvereiniteit van de britske krone en hebben dårdöär een andere relaty tot et Vereynigd Koaningryk.
+De veerteen [[britske oaverseyske gebeden]] binnen geen integraal underdeyl van et Vereynigd Koaningryk, mär binnen hyr wel van afhangelik en vallen under de britske suvereiniteit. De anspråke van et [[Britsk Antarktisk Territorium]] wördt internationaal neet erkend en is düs neet in de lyste up-enöämen. [[Jersey (eiland)|Jersey]], [[Guernsey]] en [[Man (eilaand)|Man]] vallen as [[Brits Kroonbezit|britske kroonbesittingen]] neet under de suvereiniteit van et Vereynigd Koaningryk, mär under de suvereiniteit van de britske krone en hebben dårdöär en andere relaty tot et Vereynigd Koaningryk.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1465,7 +1465,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |}
 
 === Chineeske neet-unafhangelike gebeden ===
-[[Hongkong]] en [[Makau]] maken feitelik integraal deyl üüt van China, mär hebben een speciale bestüürlike ståtus, wårdöär se vake as afhangelike gebeden eseen wörden.
+[[Hongkong]] en [[Makau]] maken feitelik integraal deyl üüt van China, mär hebben en speciale bestüürlike ståtus, wårdöär se vake as afhangelike gebeden eseen wörden.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1485,7 +1485,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |}
 
 === Däänske neet-unafhangelike gebeden ===
-[[Färöer]] en [[Gruunlaand|Gröönland]] binnen autonome provincys van et [[Koninkriek Denemarken|Koaningryk Dänemarken]] en maken feitelik integraal deyl üüt van dat land. Vake wörden se eseen as afhangelike gebeden mid een groute form van autonomy.
+[[Färöer]] en [[Gruunlaand|Gröönland]] binnen autonome provincys van et [[Koninkriek Denemarken|Koaningryk Dänemarken]] en maken feitelik integraal deyl üüt van dat land. Vake wörden se eseen as afhangelike gebeden mid en groute form van autonomy.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1505,7 +1505,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |}
 
 === Finske neet-unafhangelike gebeden ===
-[[Åland]] maakt feitelik integraal underdeyl üüt van Finland, mär hevt sinds de [[Vreade van Parys (1856)]] een internationaal erkende speciale ståtus mid groute autonomy.
+[[Åland]] maakt feitelik integraal underdeyl üüt van Finland, mär hevt sinds de [[Vreade van Parys (1856)]] en internationaal erkende speciale ståtus mid groute autonomy.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1520,7 +1520,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |}
 
 === Franske neet-unafhangelike gebeden ===
-Alle [[franske oaverseyske gebeden]] maken integraal underdeyl üüt van Frankryk<ref>[http://www.servat.unibe.ch/icl/fr00000_.html#A072_ ICL - France Constitution]</ref> en et land kent düs officieel geyn afhangelike gebeden. De franske oaverseyske gebeden wörden wel vake so eseen<ref>http://www.nationsonline.org/oneworld/territories.htm</ref>, al wörden sums allinnig de oaverseyske gebeden dee geyn oaverseysk departement binnen, eseen as afhangelike gebeden<ref name="cia.gov"/>. Vöär de vulledigheid stån hyr alle franske oaverseyske gebeden by up. Let up dat by de [[Franske Südelike en Antarktiske Gebeden]] de ansprake up een deyl van [[Antarktika]] internationaal neet erkend wördt.
+Alle [[franske oaverseyske gebeden]] maken integraal underdeyl üüt van Frankryk<ref>[http://www.servat.unibe.ch/icl/fr00000_.html#A072_ ICL - France Constitution]</ref> en et land kent düs officieel geen afhangelike gebeden. De franske oaverseyske gebeden wörden wel vake sou eseen<ref>http://www.nationsonline.org/oneworld/territories.htm</ref>, al wörden sums allinnig de oaverseyske gebeden dee geen oaverseysk departement binnen, eseen as afhangelike gebeden<ref name="cia.gov"/>. Vöär de vulledigheid stån hyr alle franske oaverseyske gebeden by up. Let up dat by de [[Franske Südelike en Antarktiske Gebeden]] de anspråke up en deyl van [[Antarktika]] internationaal neet erkend wördt.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1595,7 +1595,7 @@ Alle [[franske oaverseyske gebeden]] maken integraal underdeyl üüt van Frankry
 |}
 
 === Neaderlandske neet-unafhangelike gebeden ===
-Et [[Keuninkriek der Nederlaanden|Koaningryk van de Neaderlanden]] besteyt üüt veer gelykwaerdige landen: [[Nederlaand|Neaderland]], [[Aruba]], [[Kurasou|Curaçao]] en [[Sunt-Marten (land)|Sünt-Marten]]. Disse lätste dree binnen düs officieel geyn afhangelike gebeden van Nederland, mär wörden toch vake so eseen. De karibiske eilanden [[Bonaire]], [[Sunt-Eustasius|Sünt-Eustatius]] en [[Saba]] maken as [[Karibisk Nederland|bysündere gemeynte]] deyl üüt van et land Nederland. Vöär ståtistiske dooleinden wörden disse dree BES-eilanden döär [[ISO 3166-1]] as eyn gebeed egruppeerd.
+Et [[Keuninkriek der Nederlaanden|Koaningryk van de Neaderlanden]] besteyt üüt veer gelykwaerdige landen: [[Nederlaand|Neaderland]], [[Aruba]], [[Kurasou|Curaçao]] en [[Sunt-Marten (land)|Sünt-Marten]]. Disse lätste dree binnen düs officieel geen afhangelike gebeden van Nederland, mär wörden toch vake sou eseen. De karibiske eilanden [[Bonaire]], [[Sunt-Eustasius|Sünt-Eustatius]] en [[Saba]] maken as [[Karibisk Nederland|bysündere gemeynte]] deyl üüt van et land Nederland. Vöär ståtistiske dooleinden wörden disse dree BES-eilanden döär [[ISO 3166-1]] as eyn gebeed egruppeerd.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1635,7 +1635,7 @@ Et [[Keuninkriek der Nederlaanden|Koaningryk van de Neaderlanden]] besteyt üüt
 |}
 
 === Ny-Seylandske neet-unafhangelike gebeden ===
-De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Ny-Seyland en wörden sums as unafhangelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide afhangelike gebeden van Ny-Seyland, mär de (antarktiske) ansprake up Ross Dependency wördt internationaal neet erkend.
+De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Ny-Seyland en wörden sums as unafhangelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide afhangelike gebeden van Ny-Seyland, mär de (antarktiske) anspråke up Ross Dependency wördt internationaal neet erkend.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1655,12 +1655,12 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 |-
 |[[Tokelau]]
 |Afhangelik gebeed
-|(Geyn)
+|(Geen)
 |[[Engels]]k en [[tokelaus]]k: Tokelau
 |}
 
 === Noorske neet-unafhangelike gebeden ===
-[[Spitsbargen]] maakt feitelik integraal underdeyl üüt van Noorweagen, mär hevt volgens et [[Spitsbargenverdrag]] een internationaal erkende speciale ståtus mid groute autonomy. Ouk [[Jan Mayen]] maakt integraal deyl üüt van Noorweagen as underdeyl van de provincy [[Nordland (provincy)|Nordland]], mär wördt vake toch eseen as afhangelik gebeed. Vöär ståtistiske dooleinden wördt [[Jan Mayen]] in [[ISO 3166-1]] samenevoogd mid Spitsbargen as [[Spitsbargen en Jan Mayen]]. [[Bouveteiland]], [[Peter I-eiland]] en [[Koningin Maudland]] binnen wel afhangelike gebeden van Noorweagen, mär de (antarktiske) ansprake up de lätste twee wörden internationaal neet erkend.
+[[Spitsbargen]] maakt feitelik integraal underdeyl üüt van Noorweagen, mär hevt volgens et [[Spitsbargenverdrag]] en internationaal erkende speciale ståtus mid groute autonomy. Ouk [[Jan Mayen]] maakt integraal deyl üüt van Noorweagen as underdeyl van de provincy [[Nordland (provincy)|Nordland]], mär wördt vake toch eseen as afhangelik gebeed. Vöär ståtistiske dooleinden wördt [[Jan Mayen]] in [[ISO 3166-1]] samenevoogd mid Spitsbargen as [[Spitsbargen en Jan Mayen]]. [[Bouveteiland]], [[Peter I-eiland]] en [[Koningin Maudland]] binnen wel afhangelike gebeden van Noorweagen, mär de (antarktiske) anspråke up de lätste twee wörden internationaal neet erkend.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
