--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -35,7 +35,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''brik(ke)''
 **''bakstain(e)''
 **''tiggel'' (Baksteenfabriek > Tiggelwaark)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bakstien'' 
 *[[Stellingwarfs]]: ''bakstien'' (mv ''-stiender'', -''stienen'')
 *[[Tweants]]: ''bakstean, baksteen, bakkeie''
@@ -112,7 +112,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''barbeque''
 ***"barbecueën" is ''braaien'' of ''dikdoun ien toen''
 
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''broadn''
 **''barbeknooin''
 
@@ -222,7 +222,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Grunnegs]]:
 **''schaarm''
 **''beeld''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''(beeld)scharm'', ''-skarm''
 *[[Stellingwarfs]]: ''beeldscharm'', ''beeldschaarm''
 *[[Urkers]]: ''bieldskarm''
@@ -260,14 +260,14 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 ==Begroeten==
 *[[Nederlands]]: ''(be)groeten''
 
-*''[[Drèents]]:
+*[[Drèents]]:
 **''gro(e)ten''
 **''gedag zeggen''
 *[[Grönnegs]]:
 **''grouten''
 **''nikken'' (van ''knikken'' mit t heufd)
 **''moi zèggen''
-*''[[Stellingwarfs]]:
+*[[Stellingwarfs]]:
 **''groeten''
 **''gedag zeggen''
 
@@ -306,7 +306,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''beroup'' (hebben)
 **''affeer'' (hebben)
 **''waark'' (doun)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''broep''
 **''wark''
 *[[Stellingwarfs]]:
@@ -343,7 +343,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''twaibak''
 **''tweeibak''
 **Platduutske skriefwies: ''Tweebak''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''beskuut''
 *[[Stellingwarfs]]: 
 **''beschuut'' 
@@ -374,9 +374,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Nederlands]]: ''bezem''
 
 *[[Achterhooks]]: '''''[[riesebessem|(riese)bessem]]'''''
-*''[[Drèents]]: ''bessem'', ''bessen'', ''bezzem''
+*[[Drèents]]: ''bessem'', ''bessen'', ''bezzem''
 *[[Grönnegs]]: ''bezzem''
-*''[[Sallaans]]: ''bessem''
+*[[Sallaans]]: ''bessem''
 *[[Stellingwarfs]]: ''bessem''
 *[[Tweants]]: ''(ries)bessem''
 *[[Veluws]]: ''Gardebessem'' 
@@ -400,7 +400,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''bij'' (verhollaandst)
 * [[Oostfreisk]]:
 **''iem'' (Platduutske skriefwies: ''Imm'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bi-je''
 **''ieme''
 * [[Stellingwarfs]]: ''bi'je''
@@ -448,7 +448,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Grönnegs]]:
 **''omgekeerd''
 **''binnensteboeten''
-*''[[Sallaans]]: ''krang''
+*[[Sallaans]]: ''krang''
 *[[Stellingwarfs]]:
 **''binnenstebuten''
 **''schraankel'' (van een riem daoras per ongelok een slag in zit)
@@ -467,7 +467,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Grönnegs]]:
 **''belken'', ''bölken'' (ook NL: schreeuwen)
 **''blavven'' (nait van n hond, mor van mìns, bv. as er schèlden dut of slim housten mout)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''blokk'n''
 *[[Tweants]]:
 **''blekn''
@@ -486,7 +486,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Oostfreisk]]: 
 **''blits'' (Platduutske skriefwies: ''Blitz'')
 **''luchten'' (Platduutske skriefwies: ''Lüchten'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bleksem''
 *[[Stellingwarfs]]: ''bliksem''
 *[[Tweants]]:
@@ -537,7 +537,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''krui''
 **''bocht''
 **''draai'' (oetsproak: ''drôi'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bochte''
 **''dreie''
 *[[Stellingwarfs]]:
@@ -557,13 +557,13 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: 
 **''bölken'' (ni-jsassies veur kola: bölkwater)
-*''[[Drèents]]:
+*[[Drèents]]:
 **''boeren'', ''opboeren''
 **''bölken''
 *[[Grönnegs]]: 
 **''belken'', ''bölken'' (verolderd)
 **''boer lôten'' (maist broekt)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''boern''
 **''bulkn''
 *[[Tweants]]:
@@ -583,7 +583,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Oostfreisk]]:
 **''mous'' (Platduutske skriefwies: ''Moos'')
 **''gruinkool'' (Platduutske skriefwies: ''Grönnkohl'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''moes''
 *[[Stellingwarfs]]: ''boerekool'', ''moes''
 *[[Tweants]]: ''moos''
@@ -614,7 +614,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Oostfreisk]]:
 **''Hammerk''
 **''Hammer''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''boerschop''
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: 
@@ -628,9 +628,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 ==Boek==
 *[[Nederlands]]: ''boek''
 
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''boek'' (mv.: ''buke'')
-*''[[Tweants]]:
+*[[Tweants]]:
 **''book'' (mv.: ''beuke'')
 
 ==Boodschap (informatie)==
@@ -639,14 +639,14 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Achterhooks]]:
 **''bosskop'' Vb: A'j der ene houwt, brech dat de bosskop wal oaver
 *[[Drèents]]:
-**''bosschop'', ''-schup'', 'bood-'', ''bös-''
+**''bosschop'', ''-schup'', ''bood-'', ''bös-''
 **''bod'' (''bod doen'', ''bod kriegen'', ''op bod sturen'')
 *[[Grönnegs]]:
 **''bosschop''
 **''bösschop''
 *[[Oostfreisk]]: 
 **''bösskup'' (Platduutske skriefwies: ''Böskupp'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bosschop'' / ''bosskop''
 *[[Stellingwarfs]]:
 **''bosschop'' (klinkt as ''bosskop'')
@@ -669,7 +669,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: ''bosskop''
 *[[Drèents]]:
-**''bosschop'', ''-schup'', 'bood-'', ''bös-''
+**''bosschop'', ''-schup'', ''bood-'', ''bös-''
 **''bestelling''
 *[[Grönnegs]]: 
 **''bosschop''
@@ -702,7 +702,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''appel-/abbelhof'' (allend as der appels gruien)
 * [[Oostfreisk]]: 
 **''boumtoen''/ ''beuwmtoen'' (Platduutse skriefwies: ''Boomtuun'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bongerd''
 **''boomgaard/-tune''
 * [[Stellingwarfs]]: ''boomgaorde''
@@ -801,7 +801,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''bôrd'' (verhollaandst)
 **''telder'' (nait meer ien gebroek)
 *[[Oostfreisk]]: ''bred'' (Platduutske skriefwies: ''Bredd'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''teller'' /''telder''
 **''bö(r)d''
 *[[Stellingwarfs]]: ''bod''
@@ -825,7 +825,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''bonk(e)''
 **''knaok(e)'', ''knaokel'', ''knaoken'', ''knoke''
 *[[Grönnegs]]: ''bonk(e)''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bot'' (mv.: butte)
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: 
@@ -855,7 +855,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''stutebrog''
 **''homstôk''
 *[[Oostfreisk]]: 
-**''stoetje (Platduutske skriefwies: ''Stuutje'')
+**''stoetje'' (Platduutske skriefwies: ''Stuutje'')
 **''broodje'' 
 **''boll(e)''
 *[[Sallaans]]: 
@@ -915,7 +915,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''brummel'' (WEV)
 *[[Oostfreisk]]: 
 **''broemelbei/-beer'' (Platduutske skriefwies: ''Brummelbeei/-beer'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''brummel''
 *[[Stellingwarfs]]: 
 **''brummel'' 
@@ -938,7 +938,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Grönnegs]]: 
 **''broam''
 **''droad''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''broam''
 *[[Oostfreisk]]: ''groat'' (Platduutske skriefwies: ''Graat'')
 *[[Tweants]]:
@@ -954,7 +954,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Grönnegs]]: 
 **''knovveln''
 **''prikken''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''breei'n''
 
 ==Brievenbus==
@@ -967,7 +967,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''braivenkaast(e)'' (lös)
 **''de post'' (bv. Hest al bie de post keken?)
 *[[Oostfreisk]]: ''braif-/breeifkast'' (Platduutske skriefwies: ''breevkast'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''brie'mbusse''
 ** ''brievenbusse'' (brie-mbusse)
 *[[Stellingwarfs]]: ''brievebusse'', ''brievenbusse'' (klinkt as ''brie-mbusse'')
@@ -1017,7 +1017,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 *[[Grönnegs]]: ''buuts(e)'' (ook bie aandere klaidenstokken)
 *[[Oostfreisk]]:
 **''buus'' (Platduutske skriefwies: ''Büs'')
-**''buksentask(e)'' (Platduutske skriefwies: ''Büxentask(e))
+**''buksentask(e)'' (Platduutske skriefwies: ''Büxentask(e)'')
 *[[Sallaans]]: 
 ** ''tuk''
 ** ''buze''
@@ -1059,7 +1059,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 ***Ien West Grönnen oetsproken as [''braüjerg''] zo as de Nederlaandse "ui"
 **''bak'', ''baak''
 **''klamsk'' (letterlieks Nederlaands: ''plakkerig/drukkend'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''bruierig''
 **''breuierig''
 **''klam(me)''
@@ -1117,7 +1117,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 * [[Oostfreisk]]:
 **''brood''
 **''stoet'' (Platduutske skriefwies: ''Stuut'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''stoete''
 * [[Stellingwarfs]]: 
 **''brood''
@@ -1145,7 +1145,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''brog'', ''brug{{small()|ge}}''
 **''badde''
 **''til'' - veur een plaanken brog
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''brugge''
 * [[Stellingwarfs]]: ''brogge''
 * [[Tweants]]: 
@@ -1264,7 +1264,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''ruten'' (Platduutske skriefwies: ''ruten'')
 **''boeten'' (Platduutske skriefwies: ''buten'')
 **''oeter-'' (Pdt sw: ''uter-''; in konstruksjonen as ''oeterdieks'' uzw.)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''buutn''
 *[[Stellingwarfs]]: ''buten''
 *[[Tweants]]: ''boetn''
