--- a/Sjetlaand.mw
+++ b/Sjetlaand.mw
@@ -1,5 +1,5 @@
-[[Bestaand:Flag of Shetland.svg|thumb|right|vlagge van Sjetlaand]]
-[[Bestaand:ScotlandShetlandIslands.png|thumb|right|Sjetlaand's plek oet de kuste van [[Skotlaand]]]]
+[[Bestaand:Flag of Shetland.svg|thumb|vlagge van Sjetlaand]]
+[[Bestaand:ScotlandShetlandIslands.png|thumb|Sjetlaand's plek oet de kuste van [[Skotlaand]]]]
 '''Sjetlaand''' of '''Shetlaand''' (ooldere spelling '''Zetlaand''', van de [[yoch]]-skriefwieze ''Ȝetlaand'', [[Ooldnoors]]: ''Hjaltland'', [[Skots Gallies]]: ''Sealtainn'') is nen eilaandngroep oet de kuste van t [[Skotlaand|Skotse]] vastelaand. De eilaandn lignt op t noordoostn van [[Orkey]], 280 km van de [[Faeröer]]eilaandn en ze heurt bie de skeaid tusken de [[Atlantiese Oseaan]] op t westn en de [[Noordzee]] noar t oostn. t Hele gebeed hef ne oppervlakte van 1466 km². Sjetlaand is ene van de 32 besteurlike strekn van Skotlaand. De heuwdplaats is de [[Burgh (Skotlaand)|burgh]] [[Lerwick]].
 
 t Grötste eilaand, bekeand as [[Sjetlaands Vastelaand]], hef ne oppervlakte van 967 km², en is doarmet t doarde-grötste Skotse eilaand en t viefde-grötste [[Groot-Brittanje|Britse]] eilaand.
@@ -7,7 +7,7 @@ t Grötste eilaand, bekeand as [[Sjetlaands Vastelaand]], hef ne oppervlakte van
 Seends de [[Mesolitiese tied]] hebt dr al leu op Sjetlaand woond, en de vrogste verwiezings noar de eilaandn komt oet de [[Romeinse Riek|Romeinse tied]]. De vroge geskiedenis wör oawerheerst duur Skandinaviesen invlood, vuural van [[Noorweagn]], woer't de eilaandn töt n [[15e eeuw|15den eeuw]] bie heurn. Doe't Sjetlaand bie t vrogere [[Keuninkriek Groot-brittanje]] köm in [[1707]], wör dr rap meender haandeld met Noord-Europese stoatn, skoonwal [[viskerieje]] nog aait belangriek is vuur de lokale [[ekonomie]]. Sjetlaand heurt non bie t [[Verenigd Keuninkriek]]. Doe't in de zeuwntiger joarn van n twentigsten eeuw öllie wör eveundn in de Noordzee, treuk de Sjetlaandse ekonomie doarduur onmeundig an.
 
 De lokale kultuur is ne ofspegeling van t Noorse en Skotse oarfgood, zo as bie t [[Up Helly Aa]] veurfestival, ne stoarke muzikale tradisie, vuural op de tradisjonele [[viool]]stiel. Dr kömn völle bekeande skriewers van proza en gedichtn. De meestn doarvan gebroekt t lokale Sjetlaandse dialekt. Dr zeent verskeaidene of ezatte gebeedn um t deer- en plaantnriek te beskoarmen, woereunter n antal belangrieke nöstplekn vuur zeeveugels. 
- 
+
 == Sproake ==
 [[Bestaand:Faroe stamp 047 europe (jakob jakobsen).jpg|thumb|right|[[Jakob Jakobsen]] was nen [[Faeröer|Faeröarsen]] sproakenkeundigen en belangrieken kenner van t Norn]]
 De [[Pikties]]e sproake störven oet gedoernde de [[Vikings|Vikingbezetting]] en wör vervöngen duur [[Ooldnoors]], wat op zinne buurte veraandern in [[Norn (sproake)|Norn]]. Dit blif nog aait de meest kenmoarkende invlood van Noorse kultuur op t eilaand. Zowat elke plaatsnaam kan wierumme leaidt wordn noar de Vikings.<ref>Julian Richards, ''Vikingblod'', page 236, Hermon Forlag, ISBN 82-8320-016-X</ref> Norn wör töt in n [[18e eeuw|18den eeuw]] sprökn, doo't det geleaidelik vervöngn wör duur [[Skots]], wat ne eegne klaank kreeg, en doarduur ook wal [[Sjetlaands]] neumd wordt. Skots wörd rechtevoort aal mear vervöngn duur [[Skots Engels]]. 
@@ -24,7 +24,7 @@ Vuurbeeld van t [[Oonze Vaar]] In Sjetlaands Norn:
 :''Halaght vara nam dit.''
 : ''La Konungdum din cumma.''
 : ''La vill din vera guerde''
-: ''i vrildin sin da er i chimeri.
+: ''i vrildin sin da er i chimeri.''
 : ''Gav vus dagh u dagloght brau.''
 : ''Forgive sindorwara sin vi forgiva gem ao sinda gainst wus.''
 : ''Lia wus ikè o vera tempa, but delivra wus fro adlu idlu.''
