--- a/Stöppelhaene.mw
+++ b/Stöppelhaene.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Wild rye.jpg|thumb|right|250px|Een rogge-aor. Nao de rogge-oogst haj in Sallaand en umstreken de Stöppelhaene]]
+[[Ofbeelding:Wild rye.jpg|thumb|250px|Een rogge-aor. Nao de rogge-oogst haj in Sallaand en umstreken de Stöppelhaene]]
 [[Ofbeelding:Stöppelhaene (1964).jpg|thumb|Stöppelhaene 1964 in [[Roalte]]]]
 
 '''Stöppelhaene''' is een oogstdankfeest, of kleine viering, die aj vanolds hadden in [[Sallaand]], [[Graofschop Benthem]] en [[Münsterlaand|Westmünsterlaand]] nao 't inhalen van de rogge. Nao een tiedlaank hard wark, as 't graon vanof de akkers naor de [[boerderieje]] was ebrocht, wördden in kleine kring feest evierd, beveurbield mit [[ölliekneppe|euliekrappen]] of een flesse [[foezel]].
@@ -28,7 +28,7 @@ D'r bestiet ok een [[Nedersaksische_volksleidjes#Stöppelhaene|lied oaver Stöpp
 **''Bouwhaene'' ([[Ni'jlusen]])<ref>Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref>
 **''Stöppelhaene''
 *[[Westmünsterlaands]]
-**''Stoppelhahn''<ref>[http://www.kreis-borken.de/fileadmin/internet/Westmuensterlaendische_Mundart_b.pdf Wörterbuch des Westmünsterländischen Mundart:]'' 'Den Stoppelhahn blaosen (staon laoten)'' (Erntebrauch: Die letzte Garbe Roggen od. Buchweizen blieb stehen; es wurde auf dem Holzschuh geblasen). ''den Stoppelhahn fiern'' (Die letzte Garbe wurde hübsch verziert auf den Wagen gestellt; beim Einfahren in den Hof wurde mit einem Umtrunk gefeiert)'.''</ref>
+**''Stoppelhahn''<ref>[http://www.kreis-borken.de/fileadmin/internet/Westmuensterlaendische_Mundart_b.pdf Wörterbuch des Westmünsterländischen Mundart:]'' 'Den Stoppelhahn blaosen (staon laoten)'' (Erntebrauch: Die letzte Garbe Roggen od. Buchweizen blieb stehen; es wurde auf dem Holzschuh geblasen). ''den Stoppelhahn fiern'' (Die letzte Garbe wurde hübsch verziert auf den Wagen gestellt; beim Einfahren in den Hof wurde mit einem Umtrunk gefeiert)'.</ref>
 
 == Rifferenties ==
 <references />
@@ -37,6 +37,6 @@ D'r bestiet ok een [[Nedersaksische_volksleidjes#Stöppelhaene|lied oaver Stöpp
 *[http://www.stoppelhaene.nl/ Stöppelhaene-stee van de VVV-ANWB Raolte]
 *[http://www.sallandia.net/ Fotogalerie]
 
-[[Kategorie:Sallaands artikel|Stöppelhaene]]
-[[Kategorie:Feest|Stöppelhaene]]
-[[Kategorie:Oaveriessel|Stöppelhaene]]
+[[Kategorie:Sallaands artikel]]
+[[Kategorie:Feest]]
+[[Kategorie:Oaveriessel]]
