--- a/Kraone.mw
+++ b/Kraone.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Wasserhahn.jpg|thumb|250px|Waoterkraone'']]
+[[Ofbeelding:Wasserhahn.jpg|thumb|250px|Waoterkraone]]
 Een '''kraone''' is een ding dat derveur zurgt dat de streuming van een [[vleuistof]] of [[gas]] uut een [[peupeleiding]] eregeld kan wonnen. Meestentieds kan een kraone helemaole toe-edreid wonnen (gien streuming), vergedeeltelijk los, of helemaole los (maximale streuming).
 
 't Meest bekend bin wel de waoterkraone en de gaskraone veur gebruuk in 't [[huushouwige]] veur de toevoer van [[woater|waoter]] en [[gas]].
