--- a/Gliebaone.mw
+++ b/Gliebaone.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Glijbaan harderwijk.jpg|thumb|260px|right|Gliebaone bie 't [[dolfinarium Harderwiek]]]]
+[[Bestaand:Glijbaan harderwijk.jpg|thumb|260px|Gliebaone bie 't [[dolfinarium Harderwiek]]]]
 Een '''gliebaone''' is een speultoestel dat te vienen is in de [[speultune]], 't [[zwembad]] of je kunnen 't alleenstaond antreffen. 't Consep is vrie simpel: mit een [[ledder]] gao-j een antal meter umhoge, um vervolgens van een breje, gladde 'planke' ummeneer te gliejen.
 
 In zwembaojen wonnen gliebaonen gebruuk waor [[waoter]] as gliemiddel ummeneer streump, zodat de zwemkleding neet teveule sliet. Disse gliebaonen hemmen meestentieds een bulte bochen en kunnen makkelijk vuuftig meter lange ween, mar waotergliebaonen van meer as honderd meter lange bin der tegenswoordig oek. Um waotergliebaonen nog spannender te maken bin der soms oek gliebaonen in 't duuster. Bie disse gliebaonen gao-j deur een donkere buize mit daorin [[Locht (straoling)|loch]]- en/of geluudseffekken.
@@ -12,7 +12,7 @@ In zwembaojen wonnen gliebaonen gebruuk waor [[waoter]] as gliemiddel ummeneer s
 ** ''glidskeboan{{small()|e}}''
 ** ''slietskeboan{{small()|e}}''
 * [[Stellingwarfs]]:
-** ''gliebaene'
+** ''gliebaene''
 ** ''sullewul''
 
 [[Kategorie:West-Veluws artikel]]
